--- a/.gitconfig
+++ b/.gitconfig
@@ -3,13 +3,35 @@
 # Please adapt and uncomment the following lines:
 	name = Danny Koppenhagen
 	email = mail@d-koppenhagen.de
+
 [pull]
 	rebase = true
+
 [core]
 	editor = vim
-	excludesfile = /Users/dannykoppenhagen/.gitignore_global
+	excludesfile = /Users/dannykoppenhagen/.gitignore
+
 [color]
+	# Use colors in Git commands that are capable of colored output when
+	# outputting to the terminal. (This is the default setting in Git ≥ 1.8.4.)
 	ui = auto
+
+[color "branch"]
+	current = yellow reverse
+	local = yellow
+	remote = green
+
+[color "diff"]
+	meta = yellow bold
+	frag = magenta bold
+	old = red bold
+	new = green bold
+
+[color "status"]
+	added = yellow
+	changed = green
+	untracked = cyan
+
 [alias]
 	a = add
 	ca = commit -a
@@ -21,3 +43,31 @@
 	puog = pull origin gh-pages
 	cob = checkout -b
 	ci = commit
+
+[push]
+	default = matching
+
+# URL shorthands
+[url "git@github.com:"]
+	insteadOf = "gh:"
+	pushInsteadOf = "github:"
+	pushInsteadOf = "git://github.com/"
+
+[url "git://github.com/"]
+	insteadOf = "github:"
+
+[url "git@gist.github.com:"]
+	insteadOf = "gst:"
+	pushInsteadOf = "gist:"
+	pushInsteadOf = "git://gist.github.com/"
+
+[url "git://gist.github.com/"]
+	insteadOf = "gist:"
+
+[merge]
+	# Include summaries of merged commits in newly created merge commit messages
+	log = true
+
+[apply]
+	# Detect whitespace errors when applying a patch
+	whitespace = fix
