--- a/.gitconfig
+++ b/.gitconfig
@@ -71,3 +71,9 @@
 [apply]
 	# Detect whitespace errors when applying a patch
 	whitespace = fix
+
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
